--- a/DevTalles/Views/Home/Detalle.cshtml
+++ b/DevTalles/Views/Home/Detalle.cshtml
@@ -18,7 +18,7 @@
                     <div class="container rounded p-2">
                         <div class="row">
                             <div class="col-12 col-lg-4 p-1 text-center">
-                                <img src="@WC.RutaImagen@Model.curso.ImagenUrl" width="100%" class="rounded" />
+                                <img src="@WC.RutaImagen@Model.curso.ImagenUrl"   class="rounded img-fluid" />
                             </div>
                             <div class="col-12 col-lg-8" style="height:300px; overflow-y:scroll">
                                 <div class="row pl-3">
